--- a/sale-fe/package.json
+++ b/sale-fe/package.json
@@ -29,8 +29,10 @@
     "jose": "^4.14.4",
     "jquery": "^3.7.0",
     "jwt-decode": "^3.1.2",
+    "ngx-slick-carousel": "^15.0.0",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
