--- a/sale/src/main/resources/application.yaml
+++ b/sale/src/main/resources/application.yaml
@@ -1,4 +1,10 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: ${MAX_FILE_SIZE:20MB}
+      max-request-size: ${MAX_REQUEST_SIZE:20MB}
+      file-size-threshold: ${FILE-SIZE-THRESHOLD:2KB}
   profiles:
     group:
       default-group: base, default
@@ -14,6 +20,11 @@ spring:
       port: ${REDIS_PORT:6379}
       password: ${REDIS_PASSWORD:P@ssword789}
       database: ${REDIS_DATABASE:0}
+  minio:
+    url: ${MINIO_URL:http://127.0.0.1:9000}
+    bucket: ${MINIO_BUCKET:ecommerce}
+    access-key: ${MINIO_ACCESS_KEY:Q3AM3UQ867SPQQA43P2F}
+    secret-key: ${MINIO_SECRET_KEY:tfteSlswRu7BJ86wekitnifILbZam1KYY3TG}
   security:
     oauth2:
       client:
