--- a/env/dev.env
+++ b/env/dev.env
@@ -7,3 +7,8 @@ REDIS_HOST=${VPS}
 REDIS_PORT=36379
 REDIS_DATABASE=7
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
+
+MINIO_URL=https://minio.tiktzuki.com
+MINIO_BUCKET=ecommerce
+MINIO_ACCESS_KEY=u0t6zbf9MWh6WW9m
+MINIO_SECRET_KEY=57hnxbrcPTwRCuywAWJBhYATST7WXOPG
