--- a/cms-fe/angular.json
+++ b/cms-fe/angular.json
@@ -17,6 +17,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "base64-js",
+              "js-sha256"
+            ],
             "outputPath": "dist/cms-fe",
             "index": "src/index.html",
             "main": "src/main.ts",
