--- a/cms-fe/package.json
+++ b/cms-fe/package.json
@@ -23,6 +23,8 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@popperjs/core": "^2.11.6",
     "@types/crypto-js": "^4.1.1",
+    "ang-jsoneditor": "^3.1.0",
+    "angular-spring-data-rest": "^0.4.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "file-system": "^1.2.2",
