--- a/cms-fe/package.json
+++ b/cms-fe/package.json
@@ -11,21 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.0.3",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.3",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@ckeditor/ckeditor5-angular": "^6.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@popperjs/core": "^2.11.6",
     "@types/crypto-js": "^4.1.1",
     "ang-jsoneditor": "^3.1.0",
     "angular-spring-data-rest": "^0.4.6",
-    "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "file-system": "^1.2.2",
     "jquery": "^3.7.0",
