--- a/sale/src/main/resources/application-base.yaml
+++ b/sale/src/main/resources/application-base.yaml
@@ -31,6 +31,7 @@ spring:
             non_contextual_creation: true
     hibernate:
       ddl-auto: update
+    show-sql: true
   batch:
     jdbc:
       initialize-schema: always
