--- a/env/dev.env
+++ b/env/dev.env
@@ -1,4 +1,7 @@
 SPRING_PROFILES_ACTIVE=dev-group
+
+MOCK=true
+
 VPS=14.225.205.235
 DATABASE_URL=jdbc:postgresql://${VPS}:35432/ecommerce
 DATABASE_USER=postgres
@@ -6,7 +9,7 @@ DATABASE_USER=postgres
 REDIS_HOST=${VPS}
 REDIS_PORT=36379
 REDIS_DATABASE=7
-SPRING_JPA_HIBERNATE_DDL_AUTO=create-drop
+SPRING_JPA_HIBERNATE_DDL_AUTO=update
 
 MINIO_URL=https://minio.tiktzuki.com
 MINIO_BUCKET=ecommerce
